2009-03-16  Vincent Untz  <vuntz@gnome.org>

	* configure.in: post-release bump to 2.26.1

==================== 2.26.0 ====================

2009-03-16  Vincent Untz  <vuntz@gnome.org>

	* configure.in:
	* NEWS:
	* README: version 2.26.0

2009-03-09  Vincent Untz  <vuntz@gnome.org>

	* configure.in: remove scrollkeeper check. This has to be done by
	gnome-doc-utils, not ourselves.

2009-03-03  Vincent Untz  <vuntz@gnome.org>

	* configure.in: post-release bump to 2.26.0

==================== 2.25.92 ====================

2009-03-03  Vincent Untz  <vuntz@gnome.org>

	* configure.in:
	* NEWS:
	* README: version 2.25.92

2009-02-17  Vincent Untz  <vuntz@gnome.org>

	* configure.in: post-release bump to 2.25.92

==================== 2.25.91 ====================

2009-02-17  Vincent Untz  <vuntz@gnome.org>

	* configure.in:
	* NEWS:
	* README: version 2.25.91

2009-02-04  Vincent Untz  <vuntz@gnome.org>

	* configure.in: post-release bump to 2.25.91

==================== 2.25.90 ====================

2009-02-04  Vincent Untz  <vuntz@gnome.org>

	* configure.in:
	* NEWS:
	* README: version 2.25.90

2009-02-03  Federico Mena Quintero  <federico@novell.com>

	* configure.in (LT_VERSION): Increment the revision/age now that
	gnome_rr_config_apply_stored() is the same as before; plus we have
	the addition of gnome_rr_config_get_*_filename().

2009-01-19  Vincent Untz  <vuntz@gnome.org>

	* configure.in: post-release bump to 2.25.90

==================== 2.25.5 ====================

2009-01-19  Vincent Untz  <vuntz@gnome.org>

	* configure.in:
	* NEWS:
	* README: version 2.25.5

2009-01-06  Vincent Untz  <vuntz@gnome.org>

	* configure.in: post-release bump to 2.25.5

==================== 2.25.4 ====================

2009-01-06  Vincent Untz  <vuntz@gnome.org>

	* configure.in:
	* NEWS:
	* README: version 2.25.4

2008-12-14  Vincent Untz  <vuntz@gnome.org>

	* configure.in: post-release bump to 2.25.4

==================== 2.25.3 ====================
