@@ -1,3 +1,9 @@
+2009-03-26  Vincent Untz  <vuntz@gnome.org>
+
+	* gnome-about/gnome-about.in: make the code returning the content of
+	gnome-version.xml a bit more solid, so that we can handle a file
+	that doesn't contain the date, the distributor or the version.
+
 2009-03-16  Vincent Untz  <vuntz@gnome.org>
 
 	* configure.in: post-release bump to 2.26.1
